src/Components/PostComponent/PostComponent.module.css
.postcontainer {
  display: flex;
  gap: 80px;
  border: 1px solid #a5a735;
  height: auto;
  padding: 15px 20px;
  max-width: 100%;
  font-family: "Recursive", sans-serif;
  align-items: center;
  justify-content: space-between;
}
.imgPost {
  display: flex;
  gap: 80px;
  border: 1px solid #a5a735;
  height: auto;
  padding: 15px 20px;
  max-width: 100%;
  font-family: "Recursive", sans-serif;
  justify-content: space-between;
  position: relative;
  background-image: url(../../assets/Grid-Lines.webp);
  background-position: bottom;
  background-repeat: no-repeat;
  background-size: 100% 60%;
}
img:not(.userImg) {
  object-fit: cover;
}
.imgAndPost {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.postcontainer h3,
.imgPost h3 {
  margin-bottom: 0px;
  margin-top: 0px;
  font-size: 18px;
  font-weight: 400;
}
.postcontainer a,
.imgPost a {
  text-decoration: none;
}

.content {
  font-family: "Recursive", sans-serif;
  font-weight: 400;
  line-height: 20px;
  max-width: 400px;
  font-style: normal;
  margin-bottom: 8px;
}
.smalltext {
  font-size: 10px;
  font-weight: 400;
  margin-top: 0px;
}
.username {
  display: flex;
  gap: 10px;
}
.buttons {
  display: flex;
  align-items: center;
  gap: 20px;
}
.usernameButton {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.imgUsernameButton {
  /* display: none; */
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin-top: 20px;
}
@media screen and (max-width: 686px) {
  .postcontainer {
    flex-direction: column;
    gap: 15px;
  }
  .imgAndPost {
    width: 100%;
    align-items: center;
  }
  .imgPost {
    gap: 15px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-size: 100% 40%;
  }
  .content {
    min-width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
  }
  .usernameButton {
    gap: 20px;
  }
  .imgUsernameButton {
    gap: 20px;
  }
  .buttons {
    gap: 40px;
  }
}
@media screen and (max-width: 500px) {
  .content {
    text-align: left;
  }
  .usernameButton {
    min-width: 100%;
  }
  .imgUsernameButton {
    min-width: 100%;
  }
  .buttons {
    justify-content: space-between;
  }
  .buttons img:not(.editIcon) {
    width: 29px;
    height: 32px;
  }
  .editIcon {
    width: 28px;
    height: 28px;
  }
  .imgAndPost {
    width: 100%;
    align-items: flex-start;
  }
}
@media screen and (max-width: 431px) {
  .imgAndPost img {
    max-width: 100%;
  }
}

